# sweethomemaid

./: .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json  sweethomemaid.code-workspace
.github/workflows/: deploy.yml
client/: .eslintrc.cjs  index.html  package.json  postcss.config.cjs  vite.config.ts
client/src/: App.css  App.tsx  BoardView.css  BoardView.tsx  CaptureButton.tsx  GoodMove.tsx  HistoryNav.css  HistoryNav.tsx  PieceView.css  PieceView.tsx  SkillSelect.css  SkillSelect.tsx  StageSelect.css  StageSelect.tsx  cache.ts  play-move.ts  presets.tsx  vite-env.d.ts
client/src/app/: context.ts  provider.tsx  use-app.ts  use-play-move.ts  use-set-stage.ts
client/src/assets/: mikan_classifier.onnx  piece_classifier.onnx  printer_classifier.onnx
client/src/capture/: Canvas.tsx  Capture.tsx  CaptureButton.css  CaptureButton.tsx  ImagePlacer.css  ImagePlacer.tsx  context.ts  index.ts  load-image.ts  provider.tsx  use-body-size.ts  use-capture.ts  use-detect.ts  use-listen-extension.tsx
client/src/context/: app.tsx  use-app.ts
client/src/good-move/: GoodMove.css  GoodMove.tsx  worker.ts
client/src/options/: DropOption.tsx  (+4 more)
detect/: capture.ipynb  create_mikan_model.ipynb  create_model.ipynb  create_printer_model.ipynb  pyproject.toml  ss_server.py
docs/: index.html
docs/assets/: index-JE0_A0-F.css  index-Vnmhe2U5.js  index-XaGjNI69.js  index-eQGUf_20.css  index-oy0GThoW.js  piece_classifier-XL55aPew.onnx
extension/: .eslintrc.json  content.js  game-content.js  manifest.json  package.json  service-worker.js
logic/: .eslintrc.json  index.ts  package.json  tsconfig.json
logic/src/: board.ts  load.ts  move.test.ts  move.ts  search.ts  serialize.ts  stage.ts  suggest.test.ts  suggest.ts  utils.ts
screenshot/: pyproject.toml  server.py
(+137 files in other folders)
