[tool.poetry]
name = "detect"
version = "0.1.0"
description = ""
authors = ["naamiru <152694159+naamiru@users.noreply.github.com>"]
license = "Unlicense"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.6"
numpy = "^1.26.2"
torch = "^2.1.1"
torchvision = "^0.16.1"
onnx = "^1.15.0"
onnxscript = "^0.1.0.dev20231207"
torchsampler = "^0.1.2"
scikit-learn = "^1.3.2"
ipykernel = "^6.27.1"
matplotlib = "^3.8.2"
lightning = "^2.1.2"
flask = "^3.0.0"
pyobjc-framework-quartz = "^10.0"
pillow = "^10.1.0"
flask-cors = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
